--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav  class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="z-index:9999999999999">
+<nav  class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="z-index:9999999999999;">
   <div class="container-fluid">
 
     <div class="navbar-header">
@@ -26,7 +26,7 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-<ng-sidebar-container style="height: 100vh" >
+<ng-sidebar-container style="height: 100vh; background: #e1e1e1;" >
       <!-- A sidebar -->
       <ng-sidebar
       	[(opened)]="_opened"
@@ -50,7 +50,7 @@
         (onCloseStart)="_onCloseStart()"
         (onClosed)="_onClosed()"
         (onTransitionEnd)="_onTransitionEnd()">
-          <div style="height:100vh; padding: 10px; width: 250px;">
+          <div style="height:100vh; padding: 10px; width: 250px; ">
         <ul class="nav menu" style="margin-top: 50px;">
 
     <li><a routerLinkActive="active" [routerLink]="['/home']"><i class="fa fas fa-home"></i> Home</a></li>
