--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -60,17 +60,17 @@
         <i class="fa far fa-list-alt"></i> Orders
       </a>
       <ul class="children collapse" id="sub-item-1" style="padding: 10px;">
-        <li>
+        <li style="padding: 6px;">
           <a routerLinkActive="active" [routerLink]="['/search-order']">
-           <i class="fa fas fa-search"></i> Search Order
+           <i class="fa fas fa-search" ></i> Search Order
           </a>
         </li>
-        <li>
+        <li style="padding: 6px;">
           <a routerLinkActive="active" [routerLink]="['/open-orders']">
-            <i class="fa fa-fw fa-table"></i> Open Orders
+          <i class="fa fa-fw fa-table"></i> Open Orders
           </a>
         </li>
-        <li>
+        <li style="padding: 6px;">
           <a routerLinkActive="active" [routerLink]="['/order-history']">
             <i class="fa fas fa-history"></i> Order History
           </a>
