--- a/src/app/eproof/eproof.component.html
+++ b/src/app/eproof/eproof.component.html
@@ -1,6 +1,6 @@
 <mat-accordion style="margin: 0px 0px 0px 0px; padding: 0px; ">
   <mat-expansion-panel style="border-bottom-left-radius: 10px; border-bottom-right-radius: 10px; " 
-  					   [expanded]="true"
+  					   [expanded]="selected.length==0?true:false"
   					   (opened)="panelOpenState = true"
                        (closed)="panelOpenState = false">
     <mat-expansion-panel-header style="max-height: 35px !important; padding-top: 20px; padding-bottom: 10px;"  matTooltip="Expand / Collapse" >
@@ -23,7 +23,7 @@
 <mat-progress-bar mode="indeterminate" *ngIf="dataSource.loading$ | async" style="position: absolute; z-index: 99999; max-width: 79vw;"></mat-progress-bar>
 
 <mat-table [dataSource]="dataSource" style="resize: vertical; overflow: auto;"
-matSort matSortActive="trans_no" matSortDirection="asc" matSortDisableClear scrollTracker (trigger)="loadMore($event)" [ngClass]="selected.length ? 'small_height' : ' full_height;'" #panel>
+matSort matSortActive="trans_no" matSortDirection="asc" matSortDisableClear scrollTracker (trigger)="loadMore($event)" [ngClass]="selected.length ? 'small_height' : ' full_height;'" >
 
     <ng-container matColumnDef="customer_code">
         <mat-header-cell *matHeaderCellDef mat-sort-header>Customer #</mat-header-cell>
@@ -60,7 +60,6 @@ matSort matSortActive="trans_no" matSortDirection="asc" matSortDisableClear scro
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns" [ngClass]="{'highlight': selectedRowIndex == row.id}"
          (click)="highlight(row)" ></mat-row>
-
 </mat-table>
           <mat-paginator [length]="dataSource.count?dataSource.count:1" [pageSize]="50"
                    [pageSizeOptions]="[10, 25, 50, 100, dataSource.count?dataSource.count:0]"></mat-paginator>
@@ -73,3 +72,4 @@ matSort matSortActive="trans_no" matSortDirection="asc" matSortDisableClear scro
 		</p>
 		</ngb-alert>
 	</div>
+	<app-art-approval [selection]="selected" (close)="deselect()"  *ngIf="selected.length"></app-art-approval>
