--- a/src/app/eproof/art-approval/art-approval.component.html
+++ b/src/app/eproof/art-approval/art-approval.component.html
@@ -25,12 +25,12 @@
 				class="btn btn-primary">
 				<i class="fa far fa-comment"></i> <span>Comment</span>
 			</button></li>
-		<li><button type="button"
+		<li><button type="button" (click)="openImageDialog()"
 				style="margin-top: 0.5rem; margin-bottom: 0.5rem; min-width: 150px;"
 				class="btn btn-primary">
 				<i class="fa fas fa-search-plus"></i> <span>Zoom In</span>
 			</button></li>
-		<li><button type="button"
+		<li><button type="button" (click)="openImageDialog()"
 				style="margin-top: 0.5rem; margin-bottom: 0.5rem; min-width: 150px;"
 				class="btn btn-primary">
 				<i class="fa fas fa-search-minus"></i> <span>Zoom Out</span>
@@ -40,7 +40,7 @@
 				class="btn btn-primary">
 				<i class="fa fas fa-expand"></i> <span>Fit to Page</span>
 			</button></li>
-		<li><button type="button"
+		<li><button type="button" (click)="openPdf()"
 				style="margin-top: 0.5rem; margin-bottom: 0.5rem; min-width: 150px;"
 				class="btn btn-primary">
 				<i class="fa fas fa-download"></i> <span>Download Proof</span>
@@ -51,7 +51,7 @@
 	</ng-sidebar>
 	<div ng-sidebar-content>
 		<div style="margin-left: 50px; padding-left: 5px; padding-right: 5px;">
-			<div class="jumbotron" > 
+			<div > 
 
 			<div class="row">
 				<div class="col-md-4"  *ngFor="let dumb of dummy">
@@ -62,7 +62,7 @@
 					src="../../assets/images/art_sample.png"
 					alt="filename"> 
 				</mat-card-content> <mat-card-actions>
-				<button mat-button>Download</button>
+				<button mat-button (click)="openPdf()">Download</button>
 				<button mat-button (click)="openImageDialog()">Zoom</button>
 				</mat-card-actions> 
 				</mat-card>
