--- a/src/app/_dialogs/image-dialog/image-dialog.component.html
+++ b/src/app/_dialogs/image-dialog/image-dialog.component.html
@@ -3,8 +3,8 @@
 <mat-progress-bar mode="indeterminate" *ngIf="loading" style="position:relative; z-index:100; max-width:78vw;"></mat-progress-bar>
 <ngx-image-zoom
 style="width: 100%; height: 100%;"
-    [thumbImage]="'../../assets/images/art_sample.png'"
-    [fullImage]="'../../assets/images/art_sample.png'"
+    [thumbImage]="'https://chentek.github.io/portal/assets/images/art_sample.png'"
+    [fullImage]="'https://chentek.github.io/portal/assets/images/art_sample.png'"
     [magnification]="2"
     [zoomMode]="'hover'"
     [enableScrollZoom] = "true"
